--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </video>
     <div class="hero-overlay"></div>
     <div class="hero-sponsor-logos">
-      <img src="2.png" alt="Sponsor Logo 2" class="hero-sponsor-logo" />
+      <img src="2.webp" alt="Sponsor Logo 2" class="hero-sponsor-logo" />
     </div>
     <div class="container">
       <div class="hero-grid">
@@ -868,3 +868,4 @@
   <div class="cursor-ring" aria-hidden="true"></div>
 </body>
 </html>
+
