--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="site-header">
     <div class="container nav-container">
       <a class="logo" href="index.html" aria-label="Risers home">
-        <img src="assets/Riser_Logo.Pdf_-_1-removebg-preview.webp" alt="Risers logo" class="logo-img" width="140" height="52" />
+        <img src="assests/Riser_Logo.Pdf_-_1-removebg-preview.webp" alt="Risers logo" class="logo-img" width="140" height="52" />
       </a>
       <button class="mobile-nav-toggle" aria-controls="mobileMenu" aria-expanded="false" aria-label="Open navigation">
         <span class="sr-only">Open navigation</span>
@@ -300,7 +300,7 @@
       <div class="about-feature-grid">
         <div class="about-collage" aria-label="Risers community energy">
           <figure class="about-hero">
-            <img src="assets/group.webp" alt="Risers community celebrating together" loading="lazy" />
+            <img src="assests/group.webp" alt="Risers community celebrating together" loading="lazy" />
             <figcaption>
               <span class="about-hero-chip">Community Pulse</span>
               <strong>One tribe. Endless finish lines.</strong>
@@ -351,7 +351,7 @@
         <!-- MARATHON CARD -->
         <article class="event-card feature-card" id="kutchi-marathon">
           <div class="event-media">
-            <img src="assets/marathon.webp" alt="Marathon Event" />
+            <img src="assests/marathon.webp" alt="Marathon Event" />
           </div>
           <div class="event-body">
             <div class="event-header">
@@ -384,8 +384,8 @@
             <div class="event-co-sponsors" aria-label="Marathon co-sponsors">
               <span class="co-sponsor-label">Co-sponsors</span>
               <div class="co-sponsor-logos">
-                <img src="assets/ramdev.webp" alt="Ramdev" />
-                <img src="assets/justintime.webp" alt="Just In Time" />
+                <img src="assests/ramdev.webp" alt="Ramdev" />
+                <img src="assests/justintime.webp" alt="Just In Time" />
               </div>
             </div>
 
@@ -416,7 +416,7 @@
         <!-- SWIMMING CARD -->
         <article class="event-card feature-card" id="swimming-championship">
           <div class="event-media">
-            <img src="assets/swimming.webp" alt="Open water swimming event" />
+            <img src="assests/swimming.webp" alt="Open water swimming event" />
           </div>
           <div class="event-body">
             <div class="event-header">
@@ -448,7 +448,7 @@
 
             <div class="event-partner-badge" aria-label="Powered by Navneet">
               <span class="partner-label">Powered by</span>
-              <img src="assets/navneet.webp" alt="Navneet sponsor" />
+              <img src="assests/navneet.webp" alt="Navneet sponsor" />
             </div>
 
             <div class="event-actions">
@@ -461,7 +461,7 @@
         <!-- ATHLETICS CARD -->
         <article class="event-card feature-card" id="athletics-championship">
           <div class="event-media">
-            <img src="assets/Athelatic.webp" alt="Athletics Event" />
+            <img src="assests/Athelatic.webp" alt="Athletics Event" />
             
           </div>
           <div class="event-body">
@@ -868,4 +868,5 @@
   <div class="cursor-ring" aria-hidden="true"></div>
 </body>
 </html>
+
 
