--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <section class="hero" id="about">
     <video class="hero-video" autoplay muted loop playsinline>
       <!-- Dummy video – yaha apna file path daal dena -->
-      <source src="new.webm" type="video/webm" />
+      <source src="new.mp4" type="video/webm" />
     </video>
     <div class="hero-overlay"></div>
     <div class="hero-sponsor-logos">
@@ -868,3 +868,4 @@
   <div class="cursor-ring" aria-hidden="true"></div>
 </body>
 </html>
+
