--- a/gallery.html
+++ b/gallery.html
@@ -160,16 +160,32 @@
 
       <div class="gallery-filters">
         <button class="filter-btn active" data-filter="all">All</button>
+        <button class="filter-btn" data-filter="Athletic event">Athletic event</button>
+        <button class="filter-btn" data-filter="Kutchi marathon">Kutchi marathon</button>
         <button class="filter-btn" data-filter="Jalthal training">Jalthal training</button>
         <button class="filter-btn" data-filter="Logo reveal">Logo reveal</button>
         <button class="filter-btn" data-filter="Old memories">Old memories</button>
       </div>
 
       <div class="gallery-grid" id="galleryGrid">
+        <figure class="gallery-item" data-category="Kutchi marathon" data-folder="kutchi-marathon">
+          <img src="assests/gallery/marathon/1.CR3" alt="Kutchi Marathon 2026" />
+          <figcaption>
+            <strong>Kutchi Marathon</strong>
+            <span>Mumbai · 2026</span>
+          </figcaption>
+        </figure>
          <figure class="gallery-item" data-category="Swimming event" data-folder="swimming-event">
           <img src="assests/gallery/swimming event/69.webp" alt="Altitude swim drills" />
           <figcaption>
             <strong>Swmming Event</strong>
+            <span>Mumbai · 2025</span>
+          </figcaption>
+        </figure>
+        <figure class="gallery-item" data-category="Athletic event" data-folder="athletic-event">
+          <img src="assests/gallery/athletic event/1.JPG" alt="Athletic championship" />
+          <figcaption>
+            <strong>Athletic Event</strong>
             <span>Mumbai · 2025</span>
           </figcaption>
         </figure>
